# sevvl-aviationstack-mcp

./: .gitignore  README.md
python/: README.md  pyproject.toml
python/src/aviationstack_mcp_server/: client.py  schemas.py  server.py
python/tests/: test_server.py
typescript/: README.md  jest.config.cjs  package-lock.json  package.json  tsconfig.json
typescript/src/: client.ts  index.ts  mcp-client.ts  schemas.ts
typescript/src/tests/: index.test.ts
